--- a/duong-scheduler.yaml
+++ b/duong-scheduler.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: duong-scheduler-1
+  name: duong-scheduler
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: duong-scheduler-1-as-kube-scheduler
+  name: duong-scheduler-as-kube-scheduler
 subjects:
 - kind: ServiceAccount
-  name: duong-scheduler-1
+  name: duong-scheduler
   namespace: kube-system
 roleRef:
   kind: ClusterRole
@@ -20,10 +20,10 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: duong-scheduler-1-as-volume-scheduler
+  name: duong-scheduler-3-as-volume-scheduler
 subjects:
 - kind: ServiceAccount
-  name: duong-scheduler-1
+  name: duong-scheduler-3
   namespace: kube-system
 roleRef:
   kind: ClusterRole
@@ -36,7 +36,7 @@ metadata:
   labels:
     component: scheduler
     tier: control-plane
-  name: duong-scheduler-1
+  name: duong-scheduler-3
   namespace: kube-system
 spec:
   selector:
@@ -51,14 +51,14 @@ spec:
         tier: control-plane
         version: second
     spec:
-      serviceAccountName: duong-scheduler-1
+      serviceAccountName: duong-scheduler
       containers:
       - command:
-        - /usr/local/bin/kube-scheduler
+        - /usr/bin/duong-scheduler
         - --address=0.0.0.0
         - --leader-elect=false
-        - --scheduler-name=duong-scheduler-1
-        image: gcr.io/my-gcp-project/my-kube-scheduler:1.0
+        - --scheduler-name=duong-scheduler
+        image: 29061999/duong-scheduler-1:latest
         livenessProbe:
           httpGet:
             path: /healthz
