--- a/extender.yaml
+++ b/extender.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: my-scheduler
+  name: duong-scheduler
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: my-scheduler-cluster-admin
+  name: duong-scheduler-cluster-admin
   namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -16,32 +16,32 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     namespace: kube-system
-    name: my-scheduler
+    name: duong-scheduler
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: my-scheduler-config
+  name: duong-scheduler-config
   namespace: kube-system
 data:
   config.yaml: |
     apiVersion: kubescheduler.config.k8s.io/v1alpha1
     kind: KubeSchedulerConfiguration
-    schedulerName: my-scheduler
+    schedulerName: duong-scheduler
     algorithmSource:
       policy:
         configMap:
           namespace: kube-system
-          name: my-scheduler-policy
+          name: duong-scheduler-policy
     leaderElection:
       leaderElect: true
-      lockObjectName: my-scheduler
+      lockObjectName: duong-scheduler
       lockObjectNamespace: kube-system
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: my-scheduler-policy
+  name: duong-scheduler-policy
   namespace: kube-system
 data:
  policy.cfg : |
@@ -77,38 +77,38 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-scheduler
+  name: duong-scheduler
   namespace: kube-system
   labels:
-    app: my-scheduler
+    app: duong-scheduler
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: my-scheduler
+      app: duong-scheduler
   template:
     metadata:
       labels:
-        app: my-scheduler
+        app: duong-scheduler
     spec:
-      serviceAccountName: my-scheduler
+      serviceAccountName: duong-scheduler
       volumes:
-      - name: my-scheduler-config
+      - name: duong-scheduler-config
         configMap:
-          name: my-scheduler-config
+          name: duong-scheduler-config
       containers:
-      - name: my-scheduler-ctr
+      - name: duong-scheduler-ctr
         image: gcr.io/google_containers/hyperkube:v1.16.3
         imagePullPolicy: IfNotPresent
         args:
         - kube-scheduler
-        - --config=/my-scheduler/config.yaml
+        - --config=/duong-scheduler/config.yaml
         - -v=4
         volumeMounts:
-        - name: my-scheduler-config
-          mountPath: /my-scheduler
-      - name: my-scheduler-extender-ctr
-        image: a/b:c
+        - name: duong-scheduler-config
+          mountPath: /duong-scheduler
+      - name: duong-scheduler-extender-ctr
+        image: 29061999/duong-scheduler-2:v1
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
